Removes hanging double quote

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <footer>
       <p>
         Ranger is
-        <a href="http://wellinformed.co.uk">A Well Informed Product"</a>.
+        <a href="http://wellinformed.co.uk">A Well Informed Product</a>.
         &copy;<span id="year">2011</span>.
       </p>
       <p>
