Minor style tweaks

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Ranger</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" media="all" href="application.css" />
     <script type="text/javascript" src="dist/bundle.js"></script>
   </head>
@@ -29,7 +28,12 @@
           id="cidr_notation_range"
           name="cidr_notation_range"
         />
-        <input type="submit" id="calculateButton" value="Calculate!" />
+        <input
+          type="submit"
+          id="calculateButton"
+          value="Calculate!"
+          class="myButton"
+        />
       </p>
     </form>
 
