Tries to fix cookie domain for Analytics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
-      gtag('config', 'UA-4890474-9', {cookie_flags: 'SameSite=None;Secure'});
+      gtag('config', 'UA-4890474-9', {
+        cookie_domain: 'wellinformed.github.io',
+        cookie_flags: 'SameSite=None;Secure'
+      });
     </script>
   
     <title>Ranger</title>
