Tell the browser that this favicon is relative to here instead of in the root

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </script>
   
     <title>Ranger</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" media="all" href="application.css" />
     <script type="text/javascript" src="dist/bundle.js"></script>
   </head>
